search director method
