# storage/api-docs/api-docs.json
@@ -1195,6 +1195,47 @@
                 }
             }
         },
+        "/api/director-search/{search}": {
+            "get": {
+                "tags": [
+                    "Director"
+                ],
+                "summary": "Get director search",
+                "description": "Get director search",
+                "operationId": "get_director_search",
+                "parameters": [
+                    {
+                        "name": "search",
+                        "in": "path",
+                        "description": "director search",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "text"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            }
+        },
         "/api/hosting": {
             "get": {
                 "tags": [
